--- a/Frontend/src/pages/Login/NotFound.css
+++ b/Frontend/src/pages/Login/NotFound.css
@@ -1,27 +1,20 @@
-body {
+  body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-    width: 100vw; 
-    background-size: cover;
+    background-color: rgb(1, 116, 112);
+    background-image: url('../../Images/404-status-code.png');
     background-repeat: no-repeat;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
+    background-size: contain; 
+    background-position: center; 
+    height: 100vh; 
+}
+
   .main {
     max-width: 500px;
     width: 100%;
-    background-color: rgba(113, 112, 112, 0.9); 
-    padding: 40px; 
+   
+    padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
@@ -29,26 +22,30 @@ body {
   .heading {
     font-size: 96px;
     margin: 0;
-    color: #ff2b18e5;
+    color: #ff6f61;
     font-weight: bold;
   }
   
   .text {
     font-size: 20px;
     margin: 20px 0;
-    color: #fffcfc;
+    color: #555;
   }
   
   .button {
-    margin-top: 20px;
-    background-color: #5118ee;
+    background-color: #024daf;
     color: #fff;
     padding: 10px 20px;
     border-radius: 4px;
     text-transform: none;
+    margin-top: 80%;
     font-size: 16px;
-  }
+    position: absolute; 
+    bottom: -650px;
+    left: 50%; 
+    transform: translateX(-50%); 
+}
   
   .button:hover {
-    background-color: #3b3edf;
+    background-color: #012964;
   }
