--- a/Frontend/src/pages/Login/NotFound.css
+++ b/Frontend/src/pages/Login/NotFound.css
@@ -4,7 +4,7 @@
     padding: 0;
     overflow: hidden;
     background-color: rgb(1, 116, 112);
-    background-image: url('../../Images/404-status-code.png');
+    background-image: url('../../assets/404-status-code.png');
     background-repeat: no-repeat;
     background-size: contain; 
     background-position: center; 
