--- a/Frontend/src/pages/Login/ChatRoom.css
+++ b/Frontend/src/pages/Login/ChatRoom.css
@@ -160,3 +160,11 @@ img {
     cursor: pointer;
     margin: 15px;
   }
+
+  .files{
+    justify-content: center;
+
+    height: 30%;
+    width: 30%;
+  }
+
